--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -7,6 +7,7 @@
 /* Header */
 
 	#header {
+		//  background: rgba(0, 0, 0, .4);
 		@include vendor('display', 'flex');
 		@include vendor('flex-direction', 'column');
 		@include vendor('align-items', 'center');
@@ -67,6 +68,7 @@
 			border-top-width: _size(border-width);
 			border-bottom-width: _size(border-width);
 			max-width: 100%;
+			
 
 			.inner {
 				@include vendor('transition', (
@@ -82,6 +84,8 @@
 				> :last-child {
 					margin-bottom: 0;
 				}
+				//  background: rgba(0, 0, 0, .4);
+
 			}
 
 			p {
