--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -7,6 +7,16 @@
 /* Main */
 
 	#main {
+		.skill-icon{
+			width:50px;
+		}
+		.skills{
+			margin-top:20px;
+		}
+		.resume{
+			width:100%;
+		}
+		
 		@include vendor('flex-grow', '1');
 		@include vendor('flex-shrink', '1');
 		@include vendor('display', 'flex');
@@ -31,6 +41,7 @@
 			background-color: transparentize(_palette(bg), 0.15);
 			border-radius: _size(border-radius);
 			opacity: 0;
+			
 
 			&.timeout {
 				display: none;
