hover states, will add resume back in

--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -33,7 +33,9 @@ button,
 	white-space: nowrap;
 
 	&:hover {
-		background-color: _palette(border-bg);
+		background-color: white;
+		color: black !important;
+		font-weight: 600;
 	}
 
 	&:active {
