background image and button sizing

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -124,7 +124,7 @@
 					border-bottom: 0;
 
 					&:hover {
-						background-color: #fdbf62;
+						background-color: #be73fb;
 						color: black;
 						font-weight: 600;
 					}
